# slashpass-slack-server

./: .gitignore  Dockerfile  README.md  core.py  docker-compose.yml  environ.py  example.env  local.yml  production.yml  public_key.py  pyproject.toml  server.py  slack_action.py  slack_command.py  slack_oauth.py  utils.py  web.py
templates/: 404.html  redirect.html  success.html
tests/: test_core.py  test_slack_action.py  test_slack_command.py  test_slack_oauth.py
